spacing fix

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -24,3 +24,14 @@
     background: transparent;
     border-color: var(--color-primary-varianrt);
 }
+
+.contact__option-icon {
+    font-size: 1.5rem;
+    margin-bottom: .5rem;
+}
+
+.contact__option a {
+    margin-top: .7rem;
+    display: inline-block;
+    font-size: .8rem;
+}
